--- a/web/index.html
+++ b/web/index.html
@@ -1,17 +1,56 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-    <link rel="icon" type="image/webp" href="/logo.webp" />
-    <link rel="manifest" href="/site.webmanifest" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <!-- memos.metadata.head -->
-    <title>Memos</title>
-  </head>
-  <body class="text-base w-full min-h-svh">
-    <div id="root" class="relative w-full min-h-full"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- memos.metadata.body -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/webp" href="/logo.webp" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <meta name="description" content=""/>
+  <meta name="keywords" content=""/>
+  <!-- memos.metadata.head -->
+  <title>Memos</title>
+  <!-- pwa -->
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#FAFAFA" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-title" content="villebiz" />
+  <!-- <link rel="apple-touch-icon" href="/icons/web-app-manifest-180x180.png" /> -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="#FAFAFA" />
+  <!-- google -->
+  <link rel="canonical" href="https://villebiz.com" />
+  <meta name="image" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <meta itemProp="name" content="villebiz" />
+  <meta itemProp="description" content=""/>
+    <meta itemProp=" image" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <!-- twitter -->
+  <meta name="twitter:card" content="villebiz" />
+  <meta name="twitter:title" content="villebiz" />
+  <meta name="twitter:description" content="">
+  <meta name="twitter:site" content="https://villebiz.com" />
+  <meta name="twitter:creator" content="@matano_imran" />
+  <meta name="twitter:image:src" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <meta name="twitter:image" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <!-- facebook -->
+  <meta name="og:title" property="og:title" content="villebiz" />
+  <meta name="og:url" property="og:url" content="https://villebiz.com" />
+  <meta name="og:description" property="og:description" content=""/>
+  <meta name="og:image" property="og:image" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <meta name="og:image" property="og:image" content="https://villebiz.com/icons/villebiz-square-icon-384x384.png" />
+  <meta name="og:site_name" property="og:site_name" content="villebiz" />
+  <meta name="og:type" property="og:type" content="website" />
+  <meta name="author" content="villebiz" />
+  <meta name="google-site-verification" content="8A0uuQVsKdJe9s5wQ9rNWTankUwPtEjQXAk_FP-JJWI" />
+  <meta name="msvalidate.01" content="D9C35CD5C261BEF99AFB9F462A41FAFD" />
+  <meta name="msnbot" content="preview" />
+
+</head>
+
+<body class="text-base w-full min-h-svh">
+  <div id="root" class="relative w-full min-h-full"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <!-- memos.metadata.body -->
+</body>
+
 </html>
