chore: moved pitch-deck.html to web/public

--- a/web/public/pitch-deck.html
+++ b/web/public/pitch-deck.html
@@ -301,7 +301,7 @@
         <!-- Slide 1: Title -->
         <div class="slide" id="slide-1">
             <h1>Wekalist</h1>
-            <p class="subtitle">The Self-Hosted Productivity Platform That Puts Your Organization in Control</p>
+            <p class="subtitle">The Self-Hosted AI-driven Productivity and collaborative Platform That Puts Your Project in Control</p>
             <p style="font-size: 1.1rem; color: #666; margin-top: 50px;">Unifying scheduling, task management, and team collaboration with AI-driven insights</p>
         </div>
 
@@ -321,13 +321,15 @@
         <!-- Slide 3: Solution -->
         <div class="slide" id="slide-3">
             <h2>Our Solution</h2>
-            <p class="subtitle">Wekalist: A unified, self-hosted productivity ecosystem</p>
+            <p class="subtitle">Wekalist: Provide AI features like task generation, task summary and search, self-hosted productivity ecosystem</p>
             <ul class="solution-list">
-                <li><strong>Complete Integration:</strong> Scheduling, tasks, and collaboration in one seamless platform</li>
+                <li><strong>Collaboration:</strong> task collaboration in one seamless platform</li>
                 <li><strong>Full Data Control:</strong> Self-hosted infrastructure keeps your data on your servers</li>
                 <li><strong>Infinite Customization:</strong> Adapt every workflow to your organization's unique needs</li>
                 <li><strong>AI-Powered Insights:</strong> Smart recommendations and automation that learns from your patterns</li>
                 <li><strong>Open Architecture:</strong> Extensible platform that grows with your organization</li>
+                <li><strong>Localization:</strong> We support different languages and local features</li>
+                <li><strong>24/7 support and updates:</strong> We provide full support of our service and software updates</li>
             </ul>
         </div>
 
@@ -337,11 +339,15 @@
             <div class="feature-grid">
                 <div class="feature-card">
                     <h4>🗓️ Unified Scheduling</h4>
-                    <p>Intelligent calendar management with resource booking, meeting optimization, and conflict resolution.</p>
+                    <p>Intelligent calendar management with task management and conflict resolution.</p>
                 </div>
                 <div class="feature-card">
                     <h4>✅ Smart Task Management</h4>
                     <p>AI-driven task prioritization, automated workflows, and progress tracking across teams.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>✅ Collaborative and Comments</h4>
+                    <p>Users on a team can collaborate and provide comments on projects and task.</p>
                 </div>
                 <div class="feature-card">
                     <h4>🤝 Seamless Collaboration</h4>
@@ -357,7 +363,7 @@
                 </div>
                 <div class="feature-card">
                     <h4>🔧 Custom Workflows</h4>
-                    <p>Unlimited customization options to match your organization's exact processes.</p>
+                    <p>Unlimited customization options to match your organization's exact processes, we provide customization, domain support and email configuration.</p>
                 </div>
             </div>
         </div>
@@ -368,7 +374,7 @@
             <p class="subtitle">The productivity software market is exploding</p>
             <div class="stats-container">
                 <div class="stat-box">
-                    <div class="stat-number">$47B</div>
+                    <div class="stat-number">Ksh500B</div>
                     <div class="stat-label">Global productivity software market size</div>
                 </div>
                 <div class="stat-box">
@@ -445,16 +451,16 @@
             <p class="subtitle">Multiple revenue streams for sustainable growth</p>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <h4>💎 Core License</h4>
-                    <p><strong>$50/user/month</strong><br>Self-hosted platform with core productivity features and basic AI insights.</p>
+                    <h4>💎 Core Package</h4>
+                    <p><strong>ksh500 per month</strong><br>Self-hosted platform with core productivity features and excluding AI features. e.g Personal use</p>
                 </div>
                 <div class="feature-card">
-                    <h4>🚀 Enterprise License</h4>
-                    <p><strong>$100/user/month</strong><br>Advanced AI features, custom integrations, and dedicated support.</p>
+                    <h4>🚀 Enterprise Package</h4>
+                    <p><strong>ksh1500 per month</strong><br>Advanced AI features, custom integrations, and dedicated support. e.g For project management </p>
                 </div>
                 <div class="feature-card">
-                    <h4>🛠️ Professional Services</h4>
-                    <p><strong>$200/hour</strong><br>Implementation, customization, and ongoing consulting services.</p>
+                    <h4>🛠️ Professional Package</h4>
+                    <p><strong>ksh2000 per month</strong><br>Implementation, customization, Advance AI search and summary, and ongoing consulting services.</p>
                 </div>
                 <div class="feature-card">
                     <h4>🔌 Marketplace</h4>
@@ -469,29 +475,29 @@
             <p class="subtitle">Strategic development timeline for market domination</p>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-quarter">Q2 2025</div>
+                    <div class="timeline-quarter">August - December 2025</div>
+                    <h4>Product development</h4>
+                    <p>Development and testing of Wekalist app and legal staff, Core scheduling and task management features with basic self-hosting capabilities</p>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-quarter">January - April 2026</div>
                     <h4>MVP Launch</h4>
-                    <p>Core scheduling and task management features with basic self-hosting capabilities</p>
+                    <p>Product launch and early users and end tester</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-quarter">Q3 2025</div>
-                    <h4>AI Integration</h4>
-                    <p>Smart insights, predictive scheduling, and automated workflow recommendations</p>
-                </div>
-                <div class="timeline-item">
-                    <div class="timeline-quarter">Q4 2025</div>
+                    <div class="timeline-quarter">April - August 2026</div>
                     <h4>Enterprise Features</h4>
-                    <p>Advanced security, LDAP integration, and enterprise-grade scalability</p>
+                    <p>Launch of Enterprise and Advanced security, LDAP integration, and enterprise-grade scalability. User start paying for our services</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-quarter">Q1 2026</div>
+                    <div class="timeline-quarter">August -  December 2026</div>
                     <h4>Marketplace Launch</h4>
                     <p>Third-party integrations, custom modules, and partner ecosystem</p>
                 </div>
                 <div class="timeline-item">
-                    <div class="timeline-quarter">Q2 2026</div>
+                    <div class="timeline-quarter">December - </div>
                     <h4>Global Expansion</h4>
-                    <p>Multi-language support, regional compliance, and international partnerships</p>
+                    <p>Regional compliance, and international partnerships</p>
                 </div>
             </div>
         </div>
@@ -499,23 +505,12 @@
         <!-- Slide 9: Team -->
         <div class="slide" id="slide-9">
             <h2>Our Team</h2>
-            <p class="subtitle">World-class expertise in productivity and enterprise software</p>
+            <p class="subtitle">I'm a single founder, looking for a team</p>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <h4>👨‍💼 CEO & Co-Founder</h4>
-                    <p>15+ years building enterprise productivity solutions. Former VP at Microsoft Office division.</p>
-                </div>
-                <div class="feature-card">
-                    <h4>👩‍💻 CTO & Co-Founder</h4>
-                    <p>AI/ML expert with PhD from Stanford. Led engineering teams at Google and Slack.</p>
-                </div>
-                <div class="feature-card">
-                    <h4>🎨 Head of Product</h4>
-                    <p>UX visionary who designed collaboration tools used by millions at Atlassian and Notion.</p>
-                </div>
-                <div class="feature-card">
-                    <h4>🔒 Head of Security</h4>
-                    <p>Cybersecurity expert, former CISO at Fortune 500 companies. PhD in Computer Security.</p>
+                    <h4>👨‍💼 Founder & Developer</h4>
+                    <h4>Imran Matano</h4>
+                    <p>A software developer and enterprise productivity solutions. Tech enthusiatic.</p>
                 </div>
             </div>
         </div>
@@ -523,28 +518,24 @@
         <!-- Slide 10: Funding Ask -->
         <div class="slide" id="slide-10">
             <h2>Funding Ask</h2>
-            <p class="subtitle">$5M Series A to accelerate growth and market capture</p>
+            <p class="subtitle">Ksh500,000 Series A to accelerate growth and market capture</p>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <h4>💰 $2M - Product Development</h4>
-                    <p>Accelerate AI features, mobile apps, and advanced enterprise functionality</p>
+                    <h4>💰 ksh 150k - Product Development</h4>
+                    <p>Accelerate platform development and our ecosystem</p>
                 </div>
                 <div class="feature-card">
-                    <h4>👥 $1.5M - Team Expansion</h4>
-                    <p>Hire world-class engineers, designers, and enterprise sales professionals</p>
+                    <h4>📈 ksh 200k - Legal</h4>
+                    <p>Settling legal requirements, advise and papers</p>
                 </div>
                 <div class="feature-card">
-                    <h4>📈 $1M - Marketing & Sales</h4>
-                    <p>Build brand awareness and establish enterprise sales channels</p>
-                </div>
-                <div class="feature-card">
-                    <h4>🌍 $500K - Infrastructure</h4>
-                    <p>Global infrastructure, security audits, and compliance certifications</p>
+                    <h4>🌍 150K - Growth and marketing</h4>
+                    <p>Expansion, brand awareness and marketing</p>
                 </div>
             </div>
             
             <div class="cta-section">
-                <a href="#contact" class="cta-button">Let's Build the Future of Productivity Together</a>
+                <a href="https://wekalist.villebiz.com" target="_blank" class="cta-button">Let's Build the Future of Productivity Together</a>
             </div>
         </div>
     </div>
