chore: update pitch-deck.html

--- a/web/public/pitch-deck.html
+++ b/web/public/pitch-deck.html
@@ -301,8 +301,8 @@
         <!-- Slide 1: Title -->
         <div class="slide" id="slide-1">
             <h1>Wekalist</h1>
-            <p class="subtitle">The Self-Hosted AI-driven Productivity and collaborative Platform That Puts Your Project in Control</p>
-            <p style="font-size: 1.1rem; color: #666; margin-top: 50px;">Unifying scheduling, task management, and team collaboration with AI-driven insights</p>
+            <p class="subtitle">A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations</p>
+            <p style="font-size: 1.1rem; color: #666; margin-top: 50px;">knowledge management, privacy, and team collaboration with AI-driven insights</p>
         </div>
 
         <!-- Slide 2: Problem -->
@@ -518,18 +518,18 @@
         <!-- Slide 10: Funding Ask -->
         <div class="slide" id="slide-10">
             <h2>Funding Ask</h2>
-            <p class="subtitle">Ksh500,000 Series A to accelerate growth and market capture</p>
+            <p class="subtitle">Ksh300,000 Series A to accelerate growth and market capture</p>
             <div class="feature-grid">
                 <div class="feature-card">
-                    <h4>💰 ksh 150k - Product Development</h4>
+                    <h4>💰 ksh 100k - Product Development</h4>
                     <p>Accelerate platform development and our ecosystem</p>
                 </div>
                 <div class="feature-card">
-                    <h4>📈 ksh 200k - Legal</h4>
+                    <h4>📈 ksh 110k - Legal</h4>
                     <p>Settling legal requirements, advise and papers</p>
                 </div>
                 <div class="feature-card">
-                    <h4>🌍 150K - Growth and marketing</h4>
+                    <h4>🌍 90K - Growth and marketing</h4>
                     <p>Expansion, brand awareness and marketing</p>
                 </div>
             </div>
