--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/webp" href="/logo.webp" />
+  <link rel="icon" type="image/svg" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="manifest" href="/site.webmanifest" />
   <meta name="description" content="A modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
