chore: changed full-logo.webp to full-logo.png

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="manifest" href="/site.webmanifest" />
-  <meta name="description" content="A modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
+  <meta name="description" content="A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
   <meta name="keywords" content="Wekalist, Memos, AI-driven"/>
   <!-- wekalist.metadata.head -->
   <title>Wekalist</title>
@@ -21,12 +21,12 @@
   <link rel="canonical" href="https://wekalist.villebiz.com" />
   <meta name="image" content="/android-chrome-192x192.png" />
   <meta itemProp="name" content="Wekalist" />
-  <meta itemProp="description" content="A modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
+  <meta itemProp="description" content="A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
     <meta itemProp=" image" content="/android-chrome-192x192.png" />
   <!-- twitter -->
   <meta name="twitter:card" content="Wekalist" />
   <meta name="twitter:title" content="Wekalist" />
-  <meta name="twitter:description" content="A modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations">
+  <meta name="twitter:description" content="A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations">
   <meta name="twitter:site" content="https://wekalist.villebiz.com" />
   <meta name="twitter:creator" content="@matano_imran" />
   <meta name="twitter:image:src" content="/android-chrome-192x192.png" />
@@ -34,7 +34,7 @@
   <!-- facebook -->
   <meta name="og:title" property="og:title" content="Wekalist" />
   <meta name="og:url" property="og:url" content="https://wekalist.villebiz.com" />
-  <meta name="og:description" property="og:description" content="A modern, open-source, AI-driven self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
+  <meta name="og:description" property="og:description" content="A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
   <meta name="og:image" property="og:image" content="/android-chrome-192x192.png" />
   <meta name="og:image" property="og:image" content="/android-chrome-192x192.png" />
   <meta name="og:site_name" property="og:site_name" content="Wekalist" />
