chore: updated pitch deck

--- a/web/public/pitch-deck.html
+++ b/web/public/pitch-deck.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="description" content="A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations"/>
+    <meta name="keywords" content="Wekalist, Memos, AI-driven"/>
     <title>Wekalist - Pitch Deck</title>
     <style>
         * {
@@ -300,6 +304,7 @@
     <div class="deck-container">
         <!-- Slide 1: Title -->
         <div class="slide" id="slide-1">
+            <img src="/full-logo.png" style="width: 200px; height: 200px; border-radius: 20px; object-fit: cover;"/>
             <h1>Wekalist</h1>
             <p class="subtitle">A modern, open-source, AI-driven, self-hosted knowledge management and note-taking platform designed for privacy-conscious users and organizations</p>
             <p style="font-size: 1.1rem; color: #666; margin-top: 50px;">knowledge management, privacy, and team collaboration with AI-driven insights</p>
